refactor: Member 도메인 리팩토링 및 컨벤션 강화
- 서비스 계층 내 DTO 생성 방식을 프로젝트 컨벤션에 맞춰 통일 (new -> of)
- TokenPair, MemberCategoryCreatedResponse 등 모든 응답 Record에 정적 팩토리 메서드 적용